message MessageBlockData
{
    required string token = 1;
    required int64 size = 2;
    required bytes data = 3;
    required int64 offset = 4;
}
