message MessageGet
{
    required int64 index = 1;
    required string token = 2;
    required int64 size = 3;
    required int64 offset = 4;
}
